| Summary: | ASTERISK-29313: res_pjsip_refer: Segfault in progress notify | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2021-02-23 13:29:35.000-0600 | Date Closed: | 2021-02-26 08:12:39.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_refer |
| Versions: | 16.16.1 18.2.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Under certain conditions, the progress notify serializer can be attempting to access the subscription while sending a notify while another thread is cleaning the subscription up.
| ||
| Comments: | By: Friendly Automation (friendly-automation) 2021-02-26 08:12:41.219-0600 Change 15494 merged by George Joseph: res_pjsip_refer: Refactor progress locking and serialization [https://gerrit.asterisk.org/c/asterisk/+/15494|https://gerrit.asterisk.org/c/asterisk/+/15494] By: Friendly Automation (friendly-automation) 2021-02-26 08:12:57.098-0600 Change 15509 merged by George Joseph: res_pjsip_refer: Refactor progress locking and serialization [https://gerrit.asterisk.org/c/asterisk/+/15509|https://gerrit.asterisk.org/c/asterisk/+/15509] By: Friendly Automation (friendly-automation) 2021-02-26 08:13:11.011-0600 Change 15510 merged by George Joseph: res_pjsip_refer: Refactor progress locking and serialization [https://gerrit.asterisk.org/c/asterisk/+/15510|https://gerrit.asterisk.org/c/asterisk/+/15510] | ||